Fix overflow issue in smaller screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -117,6 +117,7 @@ body {
     background-repeat: no-repeat;
     height: 100vh;
     padding: 0 15px;
+    overflow: auto;
 }
 
 .menu-heading {
@@ -128,7 +129,7 @@ body {
 
 .menu-card-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 26rem), 1fr));
     gap: 30px;
     font-size: 1.3rem;
 }
@@ -183,6 +184,7 @@ body {
     text-align: center;
     line-height: 1.3;
     padding: 18px;
+    overflow: auto;
 }
 
 .about-heading {
@@ -198,8 +200,9 @@ body {
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     padding: 5vh 20px;
+    overflow: auto;
 }
 
 .contact-addr-title,
